removed block tracker and added more fuels