@@ -47,7 +47,7 @@ public class AltoClefTickChart {
     // This means 0xFFDDDDDD color is fully opaque, and about 82.7% in all channels, making it bright white.
 
     public void render(AltoClef mod,DrawContext context, int x, int width) {
-        if (MinecraftClient.getInstance().inGameHud.getDebugHud().shouldShowDebugHud() || !mod.getTaskRunner().isActive()) return;
+        if (!mod.getTaskRunner().isActive()) return;
 
         int height = context.getScaledWindowHeight();
         context.fill(RenderLayer.getGuiOverlay(), x, height - 37, x + width, height, 0x90505050);
@@ -57,7 +57,7 @@ public class AltoClefTickChart {
 
 
         while (list.size() >= width - 1) {
-            list.removeFirst();
+            list.remove(0);
         }
 
         for (int i = 0; i < list.size(); ++i) {
